--- a/mindquiz/style.css
+++ b/mindquiz/style.css
@@ -1,3 +1,6 @@
 body {
     text-align: center;
+    background-image: url('7abe9235f71f6899234a59188f021c3f.jpg');
+    background-repeat: no-repeat;
+    background-size: 1500px 2000px;
 }
